--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,11 +2,15 @@ body {
   margin: 0;
   background-color: #f2f2f2;
   font-size: 0.875rem;
+  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* min-height: 100vh; */
+}
+#root {
+  min-height: 100vh;
 }
 
 /* .navbar {
@@ -20,7 +24,8 @@ body {
 .navbar .nav-item .nav-link:hover {
   color: rgb(245, 238, 238);
 } */
-* * Sidebar */ .sidebar {
+/* * Sidebar */
+.sidebar {
   position: fixed;
   top: 0;
   /* rtl:raw:
@@ -81,4 +86,38 @@ a.nolinkstyle:hover {
   text-decoration: none;
   color: black;
   background-color: rgb(237, 237, 245);
+}
+
+/*
+ * Navbar
+ */
+
+.navbar-brand {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  font-size: 1rem;
+  background-color: rgba(0, 0, 0, 0.25);
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.25);
+}
+
+.navbar .navbar-toggler {
+  top: 0.25rem;
+  right: 1rem;
+}
+
+.navbar .form-control {
+  padding: 0.75rem 1rem;
+  border-width: 0;
+  border-radius: 0;
+}
+
+.form-control-dark {
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-color: rgba(255, 255, 255, 0.1);
+}
+
+.form-control-dark:focus {
+  border-color: transparent;
+  box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
