--- a/client/src/index.css
+++ b/client/src/index.css
@@ -190,3 +190,15 @@ a.nolinkstyle:hover {
   cursor: pointer;
   background: none;
 }
+
+#editor {
+  overflow: hidden;
+  position: relative;
+  border: none;
+  height: calc(70vh - 60px);
+  width: calc(90vw-50px);
+  z-index: 10;
+  margin: 0;
+  border-radius: 0;
+  padding-top: 0 !important;
+}
