--- a/client/src/index.css
+++ b/client/src/index.css
@@ -87,7 +87,10 @@ a.nolinkstyle:hover {
 	color: black;
 	background-color: rgb(237, 237, 245);
 }
-
+.icon-container {
+	min-width: 30px;
+	min-height: 20px;
+}
 /*
  * Navbar
  */
